# PathGL

./: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Config.hpp  README.md  SceneLoader.cpp  SceneLoader.hpp  main.cpp
scenes/: cornell.scene  simple.scene
shaders/: pathtracer.glsl  pathtracer_plane.glsl  pathtracer_sphere_only.glsl  quad.frag  quad.vert
